Add findPersonByFirestation